# energIA

./: .gitignore  CLAUDE.md  PROJECT_MASTER_SPEC.md  README.md  docker-compose.yml  env.example
backend/: Makefile  README.md  pyproject.toml
backend/src/energia/: __init__.py  main.py
backend/src/energia/api/: __init__.py  app.py
backend/src/energia/api/routes/: __init__.py  health.py
backend/src/energia/contexts/: README.md  __init__.py
backend/src/energia/contexts/clientes/: __init__.py
backend/src/energia/contexts/clientes/application/: __init__.py  import_clientes.py
backend/src/energia/contexts/clientes/domain/: __init__.py  cliente.py  ports.py
backend/src/energia/contexts/clientes/infrastructure/: __init__.py  cliente_repository.py  json_cliente_source.py  models.py
backend/src/energia/contexts/clientes/presentation/: __init__.py  routes.py  schemas.py
backend/src/energia/contexts/consumos/application/: delete_consumo.py  import_consumos.py  import_lecturas.py  import_lotes.py
backend/src/energia/contexts/consumos/domain/: consumo.py  lectura.py  lote.py  ports.py  sentinels.py
backend/src/energia/contexts/consumos/infrastructure/: consumo_repository.py  json_consumo_source.py  json_lectura_source.py  json_lote_source.py  lectura_repository.py  lote_directory.py  lote_repository.py  models.py  suministro_directory.py
backend/src/energia/contexts/consumos/presentation/: routes.py  schemas.py
backend/src/energia/contexts/motor/application/: procesar_lote.py
backend/src/energia/contexts/motor/domain/: checks.py  completitud.py  duplicidades.py  features.py  informe_validacion.py  ire.py  isolation_forest.py  lote_estado.py  ports.py  reglas.py  resultados_ranking.py
backend/src/energia/contexts/motor/infrastructure/: duplicidades_data_source.py  feature_vector_repository.py  features_data_source.py  isolation_forest_scorer.py  lote_procesamiento.py  modelos_ia_repository.py  predicciones_repository.py  resultados_ia_repository.py  resultados_ranking_repository.py  validacion_data_source.py
backend/src/energia/contexts/motor/presentation/: routes.py  schemas.py
backend/src/energia/contexts/suministros/: __init__.py
backend/src/energia/contexts/suministros/application/: __init__.py  import_suministros.py
backend/src/energia/contexts/suministros/domain/: __init__.py  ports.py  suministro.py
backend/src/energia/contexts/suministros/infrastructure/: __init__.py  categoria_tarifaria_directory.py  cliente_directory.py  json_suministro_source.py  models.py  suministro_repository.py
backend/src/energia/contexts/suministros/presentation/: __init__.py  routes.py  schemas.py
backend/src/energia/shared/: __init__.py  config.py  db.py
backend/src/energia/tools/: __init__.py
backend/src/energia/tools/real_import/: __main__.py  cli.py  loader.py  mapper.py  parser.py  periods.py
backend/src/energia/tools/synthetic/: __init__.py  __main__.py  anomalies.py  api_loader.py  cli.py  generator.py  manifest.py  profiles.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_health_integration.py
backend/tests/integration/contexts/clientes/: conftest.py  test_cliente_repository_integration.py  test_clientes_routes_integration.py
backend/tests/integration/contexts/consumos/: conftest.py  test_consumo_repository_integration.py  test_consumos_routes_integration.py  test_lectura_repository_integration.py  test_lecturas_routes_integration.py  test_lote_repository_integration.py  test_lotes_routes_integration.py
backend/tests/integration/contexts/motor/: conftest.py  test_duplicidades_data_source_integration.py  test_feature_vector_repository_integration.py  test_features_data_source_integration.py  test_lote_procesamiento_integration.py  test_modelos_ia_repository_integration.py  test_predicciones_repository_integration.py  test_procesar_lote_routes_integration.py  test_resultados_ia_repository_integration.py  test_resultados_routes_integration.py  test_validacion_data_source_integration.py
backend/tests/integration/contexts/suministros/: conftest.py  test_suministro_repository_integration.py  test_suministros_routes_integration.py
backend/tests/integration/tools/: __init__.py
backend/tests/integration/tools/synthetic/: __init__.py  conftest.py  test_api_loader_integration.py
backend/tests/unit/: test_app.py  test_config.py  test_db.py  test_health.py  test_main.py
backend/tests/unit/contexts/clientes/application/: test_import_clientes.py
backend/tests/unit/contexts/clientes/domain/: test_cliente.py
backend/tests/unit/contexts/consumos/application/: test_delete_consumo.py  test_import_consumos.py  test_import_lecturas.py  test_import_lotes.py
backend/tests/unit/contexts/consumos/domain/: test_consumo.py  test_lectura.py  test_lote.py  test_ports.py
backend/tests/unit/tools/: __init__.py
backend/tests/unit/tools/real_import/: test_loader.py  test_mapper.py  test_parser.py  test_periods.py
backend/tests/unit/tools/synthetic/: __init__.py  test_anomalies.py  test_cli.py  test_dunder_main.py  test_generator.py  test_manifest.py  test_profiles.py
frontend/: .prettierignore  (+7 more)
(+147 files in other folders)
