[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energia-backend"
version = "0.1.0"
description = "EnergIA backend API (FastAPI, Clean Architecture + DDD)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic-settings>=2.4,<3.0",
    # Etapa 6 (Isolation Forest, US-011/RF-006, AI_ENGINE_SPEC.md §9): RobustScaler +
    # IsolationForest (DEC-006/DEC-011/DEC-012). numpy is scikit-learn's own array
    # dependency, pinned explicitly (not left implicit) since `domain/isolation_forest.py`'s
    # matrix-building also benefits from a known-good numpy floor.
    "scikit-learn>=1.5,<2.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "asgi-lifespan>=2.1,<3.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=energia --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the real running database (require energia-db up)",
]

[tool.coverage.run]
source = ["energia"]
branch = true
# Without "greenlet", coverage.py's default tracer under-reports lines that resume after an
# awaited call (e.g. the line right after `await session.execute(...)`), because greenlet-based
# context switches (SQLAlchemy's async driver glue) confuse the plain sys.settrace tracer -- see
# nedbat/coveragepy#1082. `cliente_directory.py` showed a false 82% before this was added.
# "thread" was added for Etapa 6 (AI_ENGINE_SPEC.md §9, `infrastructure/
# isolation_forest_scorer.py`): `asyncio.to_thread` runs the actual sklearn fit/score on a real
# OS thread (a `ThreadPoolExecutor` worker, not a greenlet) -- coverage.py only auto-installs its
# tracer on newly spawned threads when "thread" concurrency is enabled, otherwise that worker
# thread's lines are silently invisible to coverage (showed a false 67% before this was added).
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query()/etc. are meant to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# scikit-learn ships no inline type stubs (and no third-party stub package exists on PyPI as of
# this writing) -- Etapa 6's ONE adapter that imports it directly (`infrastructure/
# isolation_forest_scorer.py`) is scoped narrowly here rather than silencing import errors
# project-wide.
[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
